2012-01-18

	* src/plugin.[ch]
	  src/plugin-marshal.list
	  src/prefs_template.c
	  src/prefs_common_dialog.c
	  src/prefs_filter_edit.c
	  src/prefs_account_dialog.c
	  src/prefs_filter.c
	  src/plugin_manager.c: added new plug-in signals for preferences
	  dialogs (#30).

2012-01-11

	* src/messageview.c: add .eml extension like summary_save_as().
	* src/summaryview.c: summary_set_row(): show as '(No Subject)'
	  when subject is empty string.

2012-01-06

	* src/inc.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added new plug-in signals (#10):
	  "inc-mail-start": notify start of receiving
	  "inc-mail-finished": notify end of receiving and number of new
	  messages

2012-01-06

	* src/trayicon.c: extended the blinking period of tray icon to 10
	  seconds.

2012-01-06

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2012-01-05

	* src/prefs_common_dialog.c: fixed a typo.

2011-12-27

	* version 3.2.0beta5

2011-12-26

	* src/rpop3.c: added refresh (reload) menu.

2011-12-22

	* src/rpop3.c: implemented reloading after the loading stopped.

2011-12-21

	* src/rpop3.c: supported SOCKS proxy.
	  Receive message headers from the latest one.

2011-12-21

	* libsylph/imap.c:
	  imap_session_get()
	  imap_cmd_noop(): check the activity of session, and return NULL
	  if busy. This fixes crashes when message fetch and new message
	  checking happen at the same time.

2011-12-16

	* src/mainwindow.c: main_window_create(): force visibility of the
	  message view on startup only if the layout type is vertical mode.

2011-11-29

	* version 3.2.0beta4

2011-11-29

	* src/prefs_common_dialog.c: sylfilter command was added as a preset
	  of junk filter program.

2011-11-17

	* src/mainwindow.c: main_window_create(): force visibility of the
	  message view on startup (fixes wrong view size on vertical-view
	  mode).
	  main_window_get_size(): don't update summaryview_vwidth if
	  message view is not visible.

2011-10-14
