@@ -1,3 +1,8 @@
+2012-01-19
+
+	* src/prefs_filter_edit.[ch]: made 'is shorter than' default for 'Age'
+	  condition.
+
 2012-01-18
 
 	* src/plugin.[ch]
